# django-project-template

./: .gitignore  LICENSE  README.md  pyproject.toml
src/config/settings/: general.py  local.py
src/project_template/: example.env
src/project_template/config/: settings.py
src/project_template/config/settings/: __init__.py  local.py
